--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  :root {
+    --color-thumbd-orange-primary: #f2652b;
+    --color-thumbd-orange-secondary: #fcc355;
+    --color-thumbd-blue-primary: #2b95d1;
+    --color-thumbd-blue-secondary: #a7dadd;
+  }
+}
