--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Material+Icons&family=Material+Icons+Round');
+@import url('https://cdn.lazywasabi.net/fonts/IBMPlexSansThai/IBMPlexSansThai.css');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
